[package]
name = "async-redis-lock"
version = "0.0.6"
edition = "2024"
authors = ["Steve Zhang <stevzhang01@gmail.com>"]
license = "MIT"
description = "A simple and easy-to-use asynchronous redis distributed lock implementation based on tokio and redis-rs."
repository = "https://github.com/imstevez/async-redis-lock"
keywords = ["distributed-lock", "redis-lock", "async"]
categories = ["concurrency", "caching", "data-structures"]
readme = "./README.md"
documentation = "https://docs.rs/async-redis-lock"

[dependencies]
tokio = { version = "1", features = ["full"] }
redis = { version = "0.32.5", features = ["tokio-comp", "connection-manager"] }
uuid = { version = "1.16.0", features = ["v4"] }
anyhow = "1.0.99"
thiserror = "2.0.16"